--- a/03-databases.html
+++ b/03-databases.html
@@ -316,6 +316,11 @@ $(document).ready(function () {
 
 </div>
 
+<div id="TOC">
+<ul>
+<li><a href="#fetching-data-from-annotation-packages-and-external-databases">3. Fetching data from annotation packages and external databases</a></li>
+</ul>
+</div>
 
 <head>
 <script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
@@ -360,19 +365,19 @@ gr2.seq&lt;-getSeq(hs,gr2)
 gr2.seq</code></pre>
 <pre><code>## DNAStringSet object of length 5:
 ##     width seq
-## [1]   500 CAAACGTTACGGCTGCAGTGAGTGATAAGTGCCT...TGTGCAATGCTGTAGGACGTGTGGCCAAGCCAG
-## [2]   500 TTGCCTGGTGTTTGAACTTTATATTAATGGAATC...CCCAACTCCCCCCAAGTTCTCCTTTGCAGGCAC
-## [3]   500 GAACCACCATGCCTGGTCTCGAATTCTTTGTAAA...CAGGACAGCGTGTGGGGGAGCATTGAGCTGGGC
-## [4]   500 ATCACTTGAGCCCAGGAGGCAGACGCTGCAGTGA...AAAATCGGGTCACTCCCACCCGCATACTGCGCT
-## [5]   500 GAAAGATTATCTGAGAAGGGCTCTCGAGGAGAAA...TAAAAGAGCCTTTAAGTATTTTACCCTTTTCTA</code></pre>
+## [1]   500 AGATATGTTACAAACCTGTAAATATATACACATC...TCAGACTTCTGGGCACAAGCAGGTCTCCTGCCT
+## [2]   500 TAAGTTTCCATTGTCCCAGGTGATGCTTCTCTGC...GTTCCAATTCTCATGGCATCTCATTTTCTTGGG
+## [3]   500 TCTTAACCTGCCCTATAAGAGTATACATATTCCA...CATCACCTGTAACACATTATCTCAGGAGCCGCG
+## [4]   500 ACATGATACATACATACAGATCAGAATGGACCCT...CATGTTTACATAATACATATATACAGATAGGTT
+## [5]   500 TGCAGTGAGCTATGATTGTGCCACTGCACTCCAG...TCAGAGAGGCCACAATTGTGCCTGAGATCCCAG</code></pre>
 <pre class="r"><code>## Calculate the dinucleotide frequencies for each sequence
 dinucleotideFrequency(gr2.seq)</code></pre>
 <pre><code>##      AA AC AG AT CA CC CG CT GA GC GG GT TA TC TG TT
-## [1,] 59 28 52 19 42 32 13 23 41 34 31 30 16 15 41 23
-## [2,] 26 34 17 49 41 24  6 32 24 17 21 30 35 29 48 66
-## [3,] 45 27 32 40 37 20  5 31 28 22 38 29 34 25 41 45
-## [4,] 50 25 56 18 44 30 18 27 45 40 46 21  9 24 32 14
-## [5,] 53 16 44 28 21 22 13 32 43 27 38 31 25 23 43 40</code></pre>
+## [1,] 59 27 37 38 39 12  3 25 35 18 27 21 27 22 34 75
+## [2,] 41 34 35 32 48 31  3 43 22 26 18 19 31 34 30 52
+## [3,] 41 30 40 33 44 27  6 39 28 23 23 26 31 36 32 40
+## [4,] 15 34 47 66 49 18  6 11 43  9 28 38 54 23 37 21
+## [5,] 27 37 42 30 49 28  4 42 29 32 26 22 31 26 38 36</code></pre>
 <p>All <em>BSgenome</em> databases contain a <em>seqinfo</em> object that describes the genome. We can add this information to any of our GRanges objects.</p>
 <pre class="r"><code>seqinfo(hs)</code></pre>
 <pre><code>## Seqinfo object with 298 sequences (2 circular) from hg19 genome:
@@ -425,11 +430,11 @@ seqinfo(hg19.pc.genes)</code></pre>
 </h2>
 <pre class="r"><code>letterFrequency(gr2.seq,letters = &quot;GC&quot;,as.prob = T)</code></pre>
 <pre><code>##        G|C
-## [1,] 0.494
-## [2,] 0.392
-## [3,] 0.422
-## [4,] 0.542
-## [5,] 0.454</code></pre>
+## [1,] 0.360
+## [2,] 0.422
+## [3,] 0.434
+## [4,] 0.404
+## [5,] 0.466</code></pre>
 </div>
 </details>
 2.Attempt to translate the sequences in <em>gr2.seq</em> into amino acid sequences using the <em>Biostrings</em> package.
@@ -443,11 +448,11 @@ seqinfo(hg19.pc.genes)</code></pre>
 <pre class="r"><code>translate(gr2.seq)</code></pre>
 <pre><code>## AAStringSet object of length 5:
 ##     width seq
-## [1]   166 QTLRLQ*VISAYLRRKRR*TCR*KT*AERCSHRG...YVLERAKKAPGHKTLKG*FTLCRVQCCRTCGQA
-## [2]   166 MPGV*TLY*WNHRT*FLYLWFLSFNFVSAKCIHV...NSVSLDNWTPCCESPPPR*SSTVPTPPKFSFAG
-## [3]   166 EPPCLVSNSL*MGCPCYFWLFILINKPKFSF*HL...GWS*VK*WYSKVSPGLRQVHADCRTACGGALSW
-## [4]   166 IT*AQEADAAVNYDGTTALQPGRQSKTLSEKKKK...SGSARRQGVPFPSQRKG*RTAPGKSGHSHPHTA
-## [5]   166 ERLSEKGSRGEKMSR*LLGGFQEVAWKVLKPFAW...QK*CKYNVLFLKTNCKKIFSFDAKRAFKYFTLF</code></pre>
+## [1]   166 RYVTNL*IYTHQNSMILV*KQTQSPMEQN*EARN...FETGSGFSIQTGVRWCDHDSVQLQTSGHKQVSC
+## [2]   166 *VSIVPGDASLLLPLFTTPFNNN*HLFTHTRSTE...*RSYKLSHPKHATES*FSQGATWFQFSWHLIFL
+## [3]   166 S*PAL*EYTYSSATCET*YSVFRDLPDIFLKGSY...VHK*IYNSQVIAVGISVRAMSGFITCNTLSQEP
+## [4]   166 T*YIHTDQNGP*GGQL*SDMPVGTHVYMIHIYRS...DTYIQIRMDPEVVSYSQICQQELMFT*YIYTDR
+## [5]   166 CSEL*LCHCTPAWVIE*TCFFRKKIIISISRYQY...TLTTALRHQLYHYSHFSEKNTKAQRGHNCA*DP</code></pre>
 </div>
 </details>
 </div>
