--- a/03-databases.html
+++ b/03-databases.html
@@ -297,9 +297,6 @@ $(document).ready(function () {
 <li>
   <a href="04-annotation.html">Annotating genomic regions</a>
 </li>
-<li>
-  <a href="05-plots.html">Plotting genomic data</a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -365,19 +362,19 @@ gr2.seq&lt;-getSeq(hs,gr2)
 gr2.seq</code></pre>
 <pre><code>## DNAStringSet object of length 5:
 ##     width seq
-## [1]   500 TTGTTTTTAAAAGGCTGTATGGTTTTCAGATTTA...GGAGTAAATCTTATGCAGAAGAAAAGAACTGGA
-## [2]   500 ATGAAAATATATTCTGTAGAAACAATTGGGTTTG...ATCTCTGTCTTTACCTATATCCAAGAAGAGCTC
-## [3]   500 TCCGTTGCCTATTTAAGCTGACAAATTTGAAATG...ATCTTTTTTTTTTTTTTTTTTTTTTTTTTGAGA
-## [4]   500 TCAGTATTCCTTTCCTCACTATGTAAATCCTTTT...AGACCACATTCTAAGCCAGCATGAGCCAGGGCA
-## [5]   500 TGTAATCAATCACAGTGCTTCAGCTGTCTGATCA...CCATGTGCGTGTACCAATCTCTGGTTTCTTCTG</code></pre>
+## [1]   500 GCTGGGCTGTGGCCTGTGCCGTCCCGTGGAGGTT...TGCATATCATACAAATCGTGTTCAGAAACCCCT
+## [2]   500 CACTTCATGACCATCACAAAGGTAGGCGTCCTCC...ATCTGCACTTTCTTTTTTTTTTTTTTTTTTTTG
+## [3]   500 GGTCAGACTGCCTCCTCAAGTGGGTCTCTGACCC...AGCAAGGGAACAAAAGAAAACTGGACAGAGAAT
+## [4]   500 TACCTTAAACAATTAAACAGCCGTCCTGGCGTGG...CATCATGCAGGACCACAAGGATCCAGGAAGAAG
+## [5]   500 CCCTACATTCCCAAGGACACGACTGTCCTTGCTG...TTGACACTCTGTAGTACATTTGTAATCGGTTCC</code></pre>
 <pre class="r"><code>## Calculate the dinucleotide frequencies for each sequence
 dinucleotideFrequency(gr2.seq)</code></pre>
 <pre><code>##      AA AC AG AT CA CC CG CT GA GC GG GT TA TC TG TT
-## [1,] 44 17 31 36 23 16  0 40 29 14 17 29 33 32 41 97
-## [2,] 37 21 19 55 32 20  0 35 16 10 10 35 46 37 42 84
-## [3,] 19 21 35 26 36 35  5 48 28 24 26 29 19 44 41 63
-## [4,] 44 32 40 38 55 27  2 35 35 22 11 20 21 38 35 44
-## [5,] 34 20 32 35 33 23 13 41 29 20 27 33 25 47 38 49</code></pre>
+## [1,] 58 15 28 51 24 26  9 31 23 22 20 28 47 27 35 55
+## [2,] 17 45 20 22 48 46 14 40 19 25 34 31 20 31 42 45
+## [3,] 65 39 50 17 55 41  2 37 39 23 38 17 12 32 26  6
+## [4,] 54 34 40 16 46 41 13 34 29 33 34 26 15 26 36 22
+## [5,] 19 29 26 36 35 24  9 40 27 24 44 33 29 31 49 44</code></pre>
 <p>All <em>BSgenome</em> databases contain a <em>seqinfo</em> object that describes the genome. We can add this information to any of our GRanges objects.</p>
 <pre class="r"><code>seqinfo(hs)</code></pre>
 <pre><code>## Seqinfo object with 298 sequences (2 circular) from hg19 genome:
@@ -454,11 +451,11 @@ seqinfo(hg19.pc.genes)</code></pre>
 </h2>
 <pre class="r"><code>letterFrequency(gr2.seq,letters = &quot;GC&quot;,as.prob = T)</code></pre>
 <pre><code>##        G|C
-## [1,] 0.336
-## [2,] 0.318
-## [3,] 0.462
-## [4,] 0.414
-## [5,] 0.440</code></pre>
+## [1,] 0.366
+## [2,] 0.516
+## [3,] 0.504
+## [4,] 0.514
+## [5,] 0.474</code></pre>
 </div>
 </details>
 2.Attempt to translate the sequences in <em>gr2.seq</em> into amino acid sequences using the <em>Biostrings</em> package.
@@ -472,11 +469,11 @@ seqinfo(hg19.pc.genes)</code></pre>
 <pre class="r"><code>translate(gr2.seq)</code></pre>
 <pre><code>## AAStringSet object of length 5:
 ##     width seq
-## [1]   166 MFLKGCMVFRFKFKS*SIYS*YIRCGV*VDLLSL...ICSLSEEIEQNRK*Q*R*SFLKLE*ILCRRKEL
-## [2]   166 MKIYSVETIGFVLVPFILLFIHVYLRLYNFSFSV...SAVSLWFFPHLPMSTWSTPRNLSSLSLPISKKS
-## [3]   166 SVAYLS*QI*NDRLERGLLHDMYNSLFQSNLRVL...SYRCSGGNLSIYQVHFAFALSTPSFFFFFFFF*
-## [4]   166 SVFLSSLCKSFLRQLFTQFASSIS*IKLILYEHE...GTELSVAQGCPGHRRQHHLQALQDHILSQHEPG
-## [5]   166 CNQSQCFSCLIIVPLSL*GLFLLAMHFSMSSKVK...LISGTV*RRMES*YRVLGIYSNFHVRVPISGFF</code></pre>
+## [1]   166 AGLWPVPSRGG*KVGADVLSFLRDVSL*RRPRQ*...NIICPKVLMSV*RMA*VHCSIDNAYHTNRVQKP
+## [2]   166 HFMTITKVGVLRNSQNPTFKQLYGGN*HTLSLF*...CTRLLHPPTCV*TVGCSCTRLCGSALSFFFFFF
+## [3]   166 GQTASSSGSLTPVYPDWETPPSRCQQAPHTGELW...SKKAENSKNQNASSPPKDHNSSPAREQKKTGQR
+## [4]   166 YLKQLNSRPGVVARTCNPSTLGGQGTWITRSGVR...PQLWLTRLVFLCFYFLASKSGRSIMQDHKDPGR
+## [5]   166 PYIPKDTTVLAVVGAG*LPCWRGRLRVRVAIIYL...FLNLV*PLDFISVSASVFTSLVI*HSVVHL*SV</code></pre>
 </div>
 </details>
 </div>
