--- a/03-databases.html
+++ b/03-databases.html
@@ -362,19 +362,19 @@ gr2.seq&lt;-getSeq(hs,gr2)
 gr2.seq</code></pre>
 <pre><code>## DNAStringSet object of length 5:
 ##     width seq
-## [1]   500 GCTGGGCTGTGGCCTGTGCCGTCCCGTGGAGGTT...TGCATATCATACAAATCGTGTTCAGAAACCCCT
-## [2]   500 CACTTCATGACCATCACAAAGGTAGGCGTCCTCC...ATCTGCACTTTCTTTTTTTTTTTTTTTTTTTTG
-## [3]   500 GGTCAGACTGCCTCCTCAAGTGGGTCTCTGACCC...AGCAAGGGAACAAAAGAAAACTGGACAGAGAAT
-## [4]   500 TACCTTAAACAATTAAACAGCCGTCCTGGCGTGG...CATCATGCAGGACCACAAGGATCCAGGAAGAAG
-## [5]   500 CCCTACATTCCCAAGGACACGACTGTCCTTGCTG...TTGACACTCTGTAGTACATTTGTAATCGGTTCC</code></pre>
+## [1]   500 CCTGTGACCGTGTGGTTCCTATGGGCCATGTGGT...TGTTACCATGGTTCATGTGCTCCTGCAGTCTGT
+## [2]   500 CTAGGTTGTGGCCCTGGAGGCACTGCCGAAATTT...TGTGGCCAGTCCCTGCCTTGCCTGGACTGTGTG
+## [3]   500 TCCTAACGTTATCCCTCTCCTTGCCTCCCACCTC...GTAAGTCATTCTACTATAAAGACACATGCACAG
+## [4]   500 AGAAATATTTTTAAAAGTGTTTTAATTTCTAATG...GACAATTAACAAAGAAACTGTAATCATTCATAA
+## [5]   500 TTAGGTATATCTCCCAGTGCTATCCCTCCCCCCT...ACAATGGTTGAACTAGTTGACAGTCCCACCAAC</code></pre>
 <pre class="r"><code>## Calculate the dinucleotide frequencies for each sequence
 dinucleotideFrequency(gr2.seq)</code></pre>
-<pre><code>##      AA AC AG AT CA CC CG CT GA GC GG GT TA TC TG TT
-## [1,] 58 15 28 51 24 26  9 31 23 22 20 28 47 27 35 55
-## [2,] 17 45 20 22 48 46 14 40 19 25 34 31 20 31 42 45
-## [3,] 65 39 50 17 55 41  2 37 39 23 38 17 12 32 26  6
-## [4,] 54 34 40 16 46 41 13 34 29 33 34 26 15 26 36 22
-## [5,] 19 29 26 36 35 24  9 40 27 24 44 33 29 31 49 44</code></pre>
+<pre><code>##      AA AC AG AT CA CC CG CT GA GC GG GT TA TC  TG TT
+## [1,]  2  5  6 35 19 40  4 43 11 12 40 87 16 48 100 31
+## [2,] 18 22 20 25 35 47 10 42 16 24 34 33 16 40  44 73
+## [3,] 41 27 27 43 42 36  6 28 30 17 23 32 25 32  47 43
+## [4,] 64 31 43 38 37 20  6 25 36 12 29 23 39 25  22 49
+## [5,] 20 23 24 49 41 47  4 26 22 13 20 41 33 36  48 52</code></pre>
 <p>All <em>BSgenome</em> databases contain a <em>seqinfo</em> object that describes the genome. We can add this information to any of our GRanges objects.</p>
 <pre class="r"><code>seqinfo(hs)</code></pre>
 <pre><code>## Seqinfo object with 298 sequences (2 circular) from hg19 genome:
@@ -451,11 +451,11 @@ seqinfo(hg19.pc.genes)</code></pre>
 </h2>
 <pre class="r"><code>letterFrequency(gr2.seq,letters = &quot;GC&quot;,as.prob = T)</code></pre>
 <pre><code>##        G|C
-## [1,] 0.366
-## [2,] 0.516
-## [3,] 0.504
-## [4,] 0.514
-## [5,] 0.474</code></pre>
+## [1,] 0.512
+## [2,] 0.484
+## [3,] 0.430
+## [4,] 0.376
+## [5,] 0.430</code></pre>
 </div>
 </details>
 2.Attempt to translate the sequences in <em>gr2.seq</em> into amino acid sequences using the <em>Biostrings</em> package.
@@ -469,11 +469,11 @@ seqinfo(hg19.pc.genes)</code></pre>
 <pre class="r"><code>translate(gr2.seq)</code></pre>
 <pre><code>## AAStringSet object of length 5:
 ##     width seq
-## [1]   166 AGLWPVPSRGG*KVGADVLSFLRDVSL*RRPRQ*...NIICPKVLMSV*RMA*VHCSIDNAYHTNRVQKP
-## [2]   166 HFMTITKVGVLRNSQNPTFKQLYGGN*HTLSLF*...CTRLLHPPTCV*TVGCSCTRLCGSALSFFFFFF
-## [3]   166 GQTASSSGSLTPVYPDWETPPSRCQQAPHTGELW...SKKAENSKNQNASSPPKDHNSSPAREQKKTGQR
-## [4]   166 YLKQLNSRPGVVARTCNPSTLGGQGTWITRSGVR...PQLWLTRLVFLCFYFLASKSGRSIMQDHKDPGR
-## [5]   166 PYIPKDTTVLAVVGAG*LPCWRGRLRVRVAIIYL...FLNLV*PLDFISVSASVFTSLVI*HSVVHL*SV</code></pre>
+## [1]   166 PVTVWFLWAMWFMWSCGLCVPCGLCGAVILWSCG...CGPSDPLVL*SCGPCGPVVL*FCVTMVHVLLQS
+## [2]   166 LGCGPGGTAEISLRPWLFFSMVLLNNSGCLSLTL...QFHGLAGSAGPELGPRRPPSGPSVASPCLAWTV
+## [3]   166 S*RYPSPCLPPPDRPWCVIFPSLCPYVLIGQLPF...HGSKTRNTI*PSNPITGYIPKRL*VILL*RHMH
+## [4]   166 RNIFKSVLISNVANINRYNSHDQNLFGVLSNFKK...RAVFTVDKITFQVKLVIKITGRKTINKETVIIH
+## [5]   166 LGISPSAIPPPSPHPTTVPRV*CSPSWSM*SHCS...*WDGWVKWYF*F*IPEESPH*LPQWLN*LTVPP</code></pre>
 </div>
 </details>
 </div>
