Added link to resource page

--- a/01-start.html
+++ b/01-start.html
@@ -326,6 +326,7 @@ $(document).ready(function () {
 <script src="https://kit.fontawesome.com/ece750edd7.js" crossorigin="anonymous"></script>
 </head>
 <hr />
+<p>This workshop does not provide an introduction to R and is not aimed at beginners. If you are new to R, we recommend first completing our <a href="https://swebb1.github.io/R_Training/">introductory workshop</a>.</p>
 <p>We recommend using <a href="https://rstudio.com/">RStudio</a> for this workshop. <a href="https://www.rstudio.com/">RStudio</a> is an Integrated Development Environment (IDE) for R. It can be accessed in several ways. Download <a href="https://rstudio.com/">RStudio</a> and install it on your own computer.</p>
 <p><br></p>
 <div id="using-rstudio" class="section level2">
