--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@ $(document).ready(function () {
 <p><img src="images/CELL_BIOLOGY_RGB.png" style="width:50.0%" /></p>
 <p><br></p>
 <hr />
+<p>For further courses and resources see our <a href="https://wcbinf.github.io/wcb_bioinformatics/">training page</a>.</p>
 <p>For more information contact <a href="mailto:shaun.webb@ed.ac.uk">Shaun Webb</a>.</p>
 
 
